# godaddy-dns-updater

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  gd_api.rs  ip.rs  main.rs
