[package]
name = "godaddy-dns-updater"
version = "1.0.0"
authors = ["Ryan Macdonald <hi@ryanmacdonald.ca>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
